--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Subastas Web3</title>
   <link rel="stylesheet" href="css/estilos.css" />
 </head>
 <body>
 
+  <h2>➕ Crear nueva subasta</h2>
+  <form id="formulario" onsubmit="event.preventDefault(); crearSubasta();">
+    <input type="text" id="nombre" placeholder="Nombre del producto" />
+    <input type="number" id="duracion" placeholder="Duración en segundos" />
+    <button type="submit">Crear Subasta</button>
+  </form>
+
   <h1>🧾 Lista de Subastas</h1>
   <div id="subastas"></div>
-
-  <h2>➕ Crear nueva subasta</h2>
-  <input type="text" id="nombre" placeholder="Nombre del producto">
-  <input type="number" id="duracion" placeholder="Duración en segundos">
-  <button onclick="crearSubasta()">Crear Subasta</button>
 
   <script src="js/app.js"></script>
 </body>
